# specsaver

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
coq/: DictModel.v  ListPredicates.v  ReserveLowering.v  SnakeletEval.v  SnakeletExnDemo.v  SnakeletExnLang.v  SnakeletExnSpecSDemo.v  SnakeletExnTactics.v  SnakeletExnWp.v  SnakeletLang.v  SpecPrelude.v  funspecs.feature
docs/: Axiomander-System-Design.md  Contract-Language-Specification.md  Event-Emissions-as-Ghost-State.md  Exception-Effect-Lowering-Spec.md  Specification-Driven-Testing-Architecture.md  Symmetric-Database-State-Specification-Architecture.md  specsaver-whitepaper.out  specsaver-whitepaper.tex  specsaver_slides_review_for_model.md
docs/slidedev/: package-lock.json  package.json  slides.md  test-math.md
docs/slidedev/dist-check/: 404.html
docs/slidedev/dist-check/assets/: index-BJPSFeYe.js  index-B_b7vXE_.css  md-B0mirjiR.js  md-BZifMpMH.js  md-BfMxxdXx.js  md-BwSXYZ3Y.js  md-C-R1dpwO.css  md-CZqY-EpR.js  md-CZuL4qAA.js  md-DErPWlXa.js  md-DGOwl1gs.js  md-DuUTgAGQ.js  md-Dw1qyi0t.js  md-DxR1je7u.js  md-LlgBpLQg.js  md-ND1iva5q.js  md-S8sfpLiL.js
docs/slidedev/dist-check/assets/modules/: shiki-D2wowdRf.js  unplugin-icons-DlFQpUcu.js  vue-B36ANLLI.js
docs/slidedev/dist-check/assets/slidev/: 404-__YWt31R.js  CodeBlockWrapper.vue_vue_type_script_setup_true_lang-DggOPSlK.js  DrawingControls-BP2C_Klr.js  DrawingControls.vue_vue_type_style_index_0_lang-BpHWCRQA.js  DrawingLayer-C96Exqfa.js  IconButton.vue_vue_type_script_setup_true_lang-v817NDmB.js  KaTexBlockWrapper.vue_vue_type_script_setup_true_lang-DVGu-zT7.js  NoteDisplay.vue_vue_type_style_index_0_lang-wl2NOx_k.js  SlideWrapper-CWj6tu4z.js  context-DJU_AUZO.js  default-CoBar0p2.js  md-x07idx1r.js  (+8 more)
docs/slidedev/dist-test/: index.html
docs/slidedev/dist-test/assets/: index-BnmUTqgj.css  index-CoPM0bED.js
docs/whitepaper/: specsaver-whitepaper.tex
examples/bank_transfer/: __init__.py  contract.py  contracts.py  domain.py  events.py  projection.py  service.py  transfer.feature  types.py
examples/inventory/: __init__.py  contract.py  domain.py  events.py  projection.py  release.feature  reserve.feature  restock.feature  service.py  types.py
examples/invitations/: __init__.py  accept.feature  contract.py  domain.py  events.py  invite.feature  projection.py  service.py  types.py
examples/safe_div/: contract.py  projection.py  safe_div.feature  service.py  types.py
scripts/: build_coq.sh  gen_obligations.py  phase0_coverage.py
src/specsaver/: __init__.py  args.py  binding.py  cli.py  contract.py  contract_model.py  domain.py  events.py  frames.py  gherkin.py  ghost_state.py  logic.py  protocols.py  purity.py  quantifiers.py  registry.py  render.py  runner.py  scenario.py  scenario_runner.py  temporal.py  trace.py  types.py  verify.py
src/specsaver/backend/: contract_ir.py  contract_ir_iris.py  contract_linter.py  predicate_def.py  predicate_lowering.py  shape_ir.py
src/specsaver/lower/: __init__.py  emit.py  harness.py  introspect.py
src/specsaver/theory/: __init__.py  logtheory.py  otel.py  sql.py
stubs/: builtins.pyi  math_stubs.pyi
tests/: test_args.py  test_binding.py  test_contracts.py  test_domain_conformance.py  test_examples.py  test_frames.py  test_gen_obligations.py  test_inventory.py  test_invitations.py  test_purity.py  test_pytest_bdd.py  test_quantifiers.py  test_render.py  test_runner.py  test_safe_div.py  test_scenario.py  test_sql_theory_fidelity.py  test_sqlalchemy_stub.py  test_temporal.py  test_theory_logging_otel.py  test_theory_sql.py  test_types.py
tests/theory/: sql_fidelity.feature
(+19 files in other folders)
