[project]
name = "specsaver"
version = "0.1.0"
description = "Specification-driven verification: one source of semantic truth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gherkin-official>=41.0.0",
    "pytest>=8.4.2",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
specsaver = "specsaver.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["UP047"]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
