[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specsaver"
version = "0.1.0"
description = "Specification-driven verification: contracts as the single source of semantic truth"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gavin Mendel-Gleason", email = "gavin@scidonia.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "gherkin-official>=41.0.0",
    "rich>=13.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.21",
]

[project.urls]
Homepage = "https://github.com/scidonia/specsaver"
Repository = "https://github.com/scidonia/specsaver"

[project.scripts]
specsaver = "specsaver.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "."

[tool.ruff]
target-version = "py312"
extend-exclude = ["*.feature", ".#*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["UP047"]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest-bdd>=7.3.0",
]
