[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specsaver"
version = "0.1.0"
description = "Specification-driven verification: contracts as the single source of semantic truth"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gavin Mendel-Gleason", email = "gavin@scidonia.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "gherkin-official>=29.0.0",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "pydantic>=2.13.4",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.51",
    "sqlglot>=27",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.21",
]

[project.urls]
Homepage = "https://github.com/scidonia/specsaver"
Repository = "https://github.com/scidonia/specsaver"

[project.scripts]
specsaver = "specsaver.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "."

[tool.ruff]
target-version = "py312"
extend-exclude = ["*.feature", ".#*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["UP047"]

[tool.ruff.lint.per-file-ignores]
# Imported from axiomander — keep upstream style for easy sync.
"src/specsaver/backend/**" = [
    "B007", "B009", "B905", "C416", "E501", "F401", "F841", "F541",
    "I001", "N817", "UP007", "UP045", "W292",
]
"stubs/**" = ["E501"]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest-bdd>=7.3.0",
]
